after content added alignment fixing

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a class="nav-link" href="/about.html">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/packages.html">Spots </a>
+              <a class="nav-link" href="/packages.html">Spots</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/gallery.html">Gallery</a>
@@ -220,12 +220,11 @@
               Exceeding your expectations in travel is our speciality!
             </p>
             <p class="about-para">
-              Relaxing family trips or fun-filled corporate getaways! 
-              Everything is possible when you have Royal Travels by your side.
-              From clean and cosy rides to hassle-free access to your dream spots, 
-              we got it all to give you a stellar vacation..
+              Relaxing family trips or fun-filled corporate getaways! Everything
+              is possible when you have Royal Travels by your side. From clean
+              and cosy rides to hassle-free access to your dream spots, we got
+              it all to give you a stellar vacation..
             </p>
-           
           </div>
         </div>
       </div>
@@ -233,7 +232,7 @@
       <div class="row p-5 justify-content-around">
         <!-- box 1  -->
         <div class="col-xl-4 col-sm-12 con-box align-items-center">
-          <div class="row justify-content-center align-items-center">
+          <div class="row highlight justify-content-center align-items-center">
             <div class="col-sm-4">
               <img
                 class="ab-img img-fluid"
@@ -244,18 +243,17 @@
             <div class="col-sm-8">
               <p class="title">Travel with ease and comfort!</p>
               <p>
-                Your dream travels are made joyful and comfortable with our fully furnished, 
-                perfectly maintained, 14-seater Hi-Tech Tempo Travellers.Also, the convenience 
-                of your rides is enhanced by Triple A/C and leather seats with Push Back.
-
-
+                Your dream travels are made joyful and comfortable with our
+                fully furnished, perfectly maintained, 14-seater Hi-Tech Tempo
+                Travellers.Also, the convenience of your rides is enhanced by
+                Triple A/C and leather seats with Push Back.
               </p>
             </div>
           </div>
         </div>
         <!-- box 2  -->
         <div class="col-xl-4 col-sm-12 con-box align-items-center">
-          <div class="row justify-content-center align-items-center">
+          <div class="row highlight justify-content-center align-items-center">
             <div class="col-sm-4">
               <img
                 class="ab-img img-fluid"
@@ -266,17 +264,17 @@
             <div class="col-sm-8">
               <p class="title">Enjoy your ride with music and movies!</p>
               <p>
-                With our 5.1 surround sound system, the fun and excitement 
-                begin as soon as the ride starts. Your enjoyment doesn't have 
-                to wait till you reach the destination, as movies and music 
-                can make your entire ride a fun-filled experience.
+                With our 5.1 surround sound system, the fun and excitement begin
+                as soon as the ride starts. Your enjoyment doesn't have to wait
+                till you reach the destination, as movies and music can make
+                your entire ride a fun-filled experience.
               </p>
             </div>
           </div>
         </div>
         <!-- box 3  -->
         <div class="col-xl-4 col-sm-12 con-box align-items-center">
-          <div class="row justify-content-center align-items-center">
+          <div class="row highlight justify-content-center align-items-center">
             <div class="col-sm-4">
               <img
                 class="ab-img img-fluid"
@@ -287,9 +285,10 @@
             <div class="col-sm-8">
               <p class="title">Our years of experience will guide your way!</p>
               <p>
-                We have fulfilled the travel dreams of many for more than 12 years
-                in and around Pollachi. Also, our eight-year experience in aiding 
-                tours and travels in and around Coimbatore makes us a perfect choice for a peaceful journey.
+                We have fulfilled the travel dreams of many for more than 12
+                years in and around Pollachi. Also, our eight-year experience in
+                aiding tours and travels in and around Coimbatore makes us a
+                perfect choice for a peaceful journey.
               </p>
             </div>
           </div>
@@ -302,65 +301,75 @@
     <!-- Package -->
     <section class="pkg-sec container">
       <div class="row">
-        <div class="col-lg-4 pkg-box mb-5">
+        <div class="col-lg-4 pkg-box main-home-pkg mb-5">
           <div class="pkg-img">
-            <img class="img-fluid" src="/images/ooty.webp" alt="" />
+            <img class="img-fluid img-cover" src="/images/ooty.webp" alt="" />
           </div>
           <h3 class="pkg-title">OOTY</h3>
           <p class="pkg-days">3 Days / 5 Nights</p>
           <div class="pkg-body">
             <p>
-              Udhagamandalam is the name of the town that is lovingly called 
-              by many as Ooty. It is also rightfully referred to as "The Queen 
-              of Hill Stations," and it has something to surprise you even after 
-              a hundred visits. From Pykara Lake to Dodabetta Peak, Ooty encompasses 
-              lots of treasures within itself. Also, the cold weather and the misty 
-              outlook of the town are some of its major points of attraction. So, 
-              if you are a lover of nature and peaceful environments, Ooty is sure 
-              to captivate you and claim a permanent place in your mind.
+              Udhagamandalam is the name of the town that is lovingly called by
+              many as Ooty. It is also rightfully referred to as "The Queen of
+              Hill Stations," and it has something to surprise you even after a
+              hundred visits. From Pykara Lake to Dodabetta Peak, Ooty
+              encompasses lots of treasures within itself. Also, the cold
+              weather and the misty outlook of the town are some of its major
+              points of attraction. So, if you are a lover of nature and
+              peaceful environments, Ooty is sure to captivate you and claim a
+              permanent place in your mind. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Adipisci, placeat. It is often
+              referred to as the "Queen of Hill Stations" in South India.
             </p>
             <button class="btn btn-crush">Know More</button>
           </div>
         </div>
-        <div class="col-lg-4 pkg-box mb-5">
+        <div class="col-lg-4 pkg-box main-home-pkg mb-5">
           <div class="pkg-img">
-            <img class="img-fluid" src="/images/munnar.webp" alt="" />
+            <img class="img-fluid img-cover" src="/images/munnar.webp" alt="" />
           </div>
           <h3 class="pkg-title">KODAIKANAL</h3>
           <p class="pkg-days">3 Days / 5 Nights</p>
           <div class="pkg-body">
             <p>
-              Many of us have visited Kodaikanal whenever we had a chance, especially 
-              in the summer season. It is one of the well-known tourist spots in South 
-              India, and it's a dream destination for a rejuvenating retreat at the 
-              weekends. One thing you cannot miss while visiting Kodaikanal is the 
-              lake that is named after the hill station. Enjoying boat rides in the 
-              lake surrounded by mist will feel like something straight out of your 
-              dreams. The forests of Kodaikanal are a sight for sore eyes, and even 
-              the town of Kodaikanal is a beautiful resort for leisure walks. So, 
-              choose our travel services to let us take you on a perfect trip to 
-              the wonderful "Princess of Hill Station." 
+              Many of us have visited Kodaikanal whenever we had a chance,
+              especially in the summer season. It is one of the well-known
+              tourist spots in South India, and it's a dream destination for a
+              rejuvenating retreat at the weekends. One thing you cannot miss
+              while visiting Kodaikanal is the lake that is named after the hill
+              station. Enjoying boat rides in the lake surrounded by mist will
+              feel like something straight out of your dreams. The forests of
+              Kodaikanal are a sight for sore eyes, and even the town of
+              Kodaikanal is a beautiful resort for leisure walks. So, choose our
+              travel services to let us take you on a perfect trip to the
+              wonderful "Princess of Hill Station."
             </p>
             <button class="btn btn-crush">Know More</button>
           </div>
         </div>
-        <div class="col-lg-4 pkg-box mb-5">
+        <div class="col-lg-4 pkg-box main-home-pkg mb-5">
           <div class="pkg-img">
-            <img class="img-fluid" src="/images/mudumalai.webp" alt="" />
+            <img
+              class="img-fluid img-cover"
+              src="/images/mudumalai.webp"
+              alt=""
+            />
           </div>
           <h3 class="pkg-title">Mudumalai</h3>
           <p class="pkg-days">3 Days / 5 Nights</p>
           <div class="pkg-body">
             <p>
-              Munnar is a magnificent hill station that resides in the mountain range 
-              called the Western Ghats. Even though it is famous for the visits of newly 
-              married couples, its heavenly outlook can win all our hearts with just a 
-              mere glance. Also, if you are lucky enough to visit Munnar during the flowering 
-              season of the Kurinji flowers, be prepared to be swept over by their breathtaking 
-              view. Munnar has rich wildlife, and it holds many surprises within itself for you 
-              to experience, like Virgin forests and massive waterfalls. If you haven't been to 
-              Munnar, be quick to book a trip to this enchanting location and leave with a lot 
-              of memories to treasure for a lifetime
+              Munnar is a magnificent hill station that resides in the mountain
+              range called the Western Ghats. Even though it is famous for the
+              visits of newly married couples, its heavenly outlook can win all
+              our hearts with just a mere glance. Also, if you are lucky enough
+              to visit Munnar during the flowering season of the Kurinji
+              flowers, be prepared to be swept over by their breathtaking view.
+              Munnar has rich wildlife, and it holds many surprises within
+              itself for you to experience, like Virgin forests and massive
+              waterfalls. If you haven't been to Munnar, be quick to book a trip
+              to this enchanting location and leave with a lot of memories to
+              treasure for a lifetime
             </p>
             <button class="btn btn-crush">Know More</button>
           </div>
